fix: stretch the length of the profile card

--- a/Time_Banking/Time_Banking/static/css/profile_info.css
+++ b/Time_Banking/Time_Banking/static/css/profile_info.css
@@ -25,7 +25,6 @@
     border-radius: 20px;
     position: relative; /* Position relative to container */
     text-align: center;
-    max-height: 400px;
     margin-right: 20px;
 }
 
